# deso

./: .gitignore  Cargo.toml  README.md
deso_godot/: libgame.gdnlib  new_shader.shader  project.godot
deso_godot/assets/gfx/: soldier_tilesheet.png.import
deso_godot/scenes/: GameWorld.gdns  Main_initial.tscn  Player.gdns  player.tscn  unit_selector.gdns
gd_extras/: Cargo.toml
gd_extras/src/: input.rs  lib.rs  movement.rs  node_ext.rs
libgame/: Cargo.toml
libgame/src/: gameworld.rs  lib.rs  map.rs  player.rs  unit_selector.rs
