[package]
name = "deso_libgame"
version = "0.1.0"
authors = ["Spiros Makris <makris.spiros@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
gdnative = { git = "https://github.com/godot-rust/godot-rust/" }
gd_extras = { path = "../gd_extras"}
legion = { git = "https://github.com/tomgillen/legion"}
lazy_static = "1.4"
bracket-pathfinding = "0.8.1"
